[tool.poetry]
name = "metastreet-ds-test"
version = "0.1.0"
description = ""
authors = ["Pavel Pleskov <ppleskov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
tkcalendar = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
